@@ -1,3 +1,9 @@
+2013-01-08  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
+	* build-all.sh: Create unisrc directory. Use negation of tests,
+	rather than else clauses.
+	* symlink-tree.sh: Complete coding.
+
 2012-12-23  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
 	* dejagnu: New directory for DejaGnu specific testing
